# oh-my-notion

./: .env.example  .gitignore  AGENT_ROADMAP.md  PRODUCT.md  README.md  pyproject.toml
app/: __init__.py  agent.py  agent_executor.py  agent_planner.py  agent_runtime.py  answer_rendering.py  cleaner.py  config.py  db.py  index.py  inspect.py  llm.py  main.py  memory.py  models.py  notion_parser.py  reindex.py  sync_notion.py  tools.py  tools_registry.py  web.py
app/agent/: __init__.py  executor.py  memory.py  models.py  planner.py  rendering.py  runtime.py  service.py  tools_registry.py
app/context/: __init__.py  builder.py  models.py
app/core/: __init__.py  config.py
app/data/db/: oh_my_notion.sqlite3
app/evaluation/: __init__.py  agent.py  dataset.py  retrieval.py
app/ingestion/: __init__.py  files.py
app/inspection/: __init__.py  dashboard.py  inspectors.py
app/notion/: __init__.py  parser.py  sync.py
app/retrieval/: __init__.py  embeddings.py  hybrid.py  index.py  tools.py
app/skills/: __init__.py  registry.py
app/storage/: __init__.py  cleaner.py  db.py  models.py  reindex.py
app/webapp/: __init__.py  server.py
eval/: questions.jsonl
oh_my_notion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
web/: app.js  index.html  styles.css
