[project]
name = "oh-my-notion"
version = "0.1.0"
description = "A local-first Notion agent for learning agent development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
]

[project.scripts]
oh-my-notion = "app.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

